--- a/index.html
+++ b/index.html
@@ -435,13 +435,13 @@
           class="bx bxl-linkedin">
           <br />
           LinkedIn</i></a>
-      <!-- <a href="https://twitter.com/Tushars2526" target="_blank" class="footer-icon"><i class="bx bxl-twitter">
+      <!-- <a href="#" target="_blank" class="footer-icon"><i class="bx bxl-twitter">
           <br />
           Twitter</i></a> -->
       <a href="mailto:gsathvikareddy63@gmail.com" target="_blank" class="footer-icon"><i class="bx bx-mail-send">
           <br />
           E-mail</i></a>
-      <!-- <a href="tel:+91 8839819475" target="_blank" class="footer-icon"><i class="bx bx-phone">
+      <!-- <a href="tel" target="_blank" class="footer-icon"><i class="bx bx-phone">
           <br />
           Phone</i></a> -->
       <a href="https://github.com/gsathvikareddy78" target="_blank" class="footer-icon"><i class="bx bxl-github">
